selfhost/test/parser/if_error_no_closing_pipe.out
Error at %FILE_NAME%:1:11
Unexpected token '{', expected '|':
  |  if foo |a {
               ^